--- a/src/main/resources/com/example/pizza/hello-view.fxml
+++ b/src/main/resources/com/example/pizza/hello-view.fxml
@@ -5,12 +5,72 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.pizza.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javax.swing.table.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pizza.HelloController">
+    <children>
+        <TableView fx:id="table" prefHeight="200.0" prefWidth="200.0">
+            <columns>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+
+            </columns>
+            <VBox.margin>
+                <Insets left="20.0" right="20.0" />
+            </VBox.margin>
+        </TableView>
+        <HBox>
+            <children>
+                <VBox>
+                    <children>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Legdrgább pizza">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Összes bevétel Ft">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Drágább 2500-nál százalék">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Akciósak fáljbaír">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                    </children>
+                    <HBox.margin>
+                        <Insets left="20.0" right="20.0" top="20.0" />
+                    </HBox.margin>
+                </VBox>
+                <VBox>
+                    <children>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Fájl beolvas">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Hibás adat törlése">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" prefWidth="150.0" text="Kilép">
+                            <VBox.margin>
+                                <Insets bottom="10.0" />
+                            </VBox.margin>
+                        </Button>
+                    </children>
+                    <HBox.margin>
+                        <Insets left="20.0" right="20.0" top="20.0" />
+                    </HBox.margin>
+                </VBox>
+            </children>
+        </HBox>
+    </children>
 </VBox>
